crates/testing/tests/testscript/errors/string_escape_unicode_char.error
parse error at line 2 column 7 for "\"'\\\\u{fg}'\"":
'\u{fg}'
      ^